WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302012
[WebRTC][GStreamer] Fix deadlock in WebKitMediaStream that hung tests
https://bugs.webkit.org/show_bug.cgi?id=302012
Summary
[WebRTC][GStreamer] Fix deadlock in WebKitMediaStream that hung tests
Alicia Boya García
Reported
2025-11-05 08:55:41 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2025-11-05 09:02:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53456
EWS
Comment 2
2025-11-06 01:42:40 PST
Committed
302641@main
(94bb75608beb): <
https://commits.webkit.org/302641@main
> Reviewed commits have been landed. Closing PR #53456 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug